# ChessGame

./: .gitignore  CMakeLists.txt  ChessBoard.cpp  ChessBoard.hpp  ChessGame.cpp  ChessGame.hpp  ChessPiece.cpp  ChessPiece.hpp  main.cpp  main.hpp
include/: ChessBoard.hpp  ChessGame.hpp  ChessGraphic.hpp
src/: ChessBoard.cpp  ChessGame.cpp  ChessGraphic.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
test/coverage/: ChessBoard.gcda  ChessBoard.gcno  ChessGame.gcda  ChessGame.gcno  ChessPiece.gcda  ChessPiece.gcno  coverage_report.txt  main.gcda  main.gcno
